# DCCV

./: .dockerignore  .gitattributes  .gitignore  README.md  _config.yml  deploy-dccv.sh  docker-compose-prod.yml  docker-compose.yml  gradle.properties  gradlew  index.md  settings.gradle.kts
.github/workflows/: chainMerge.yml  release-workflow.yml
app/src/main/headers/: app.h
app/src/test/cpp/: app_test.cpp
application/: build.gradle.kts
application/src/main/scala/actor/: Actor.scala  (+3 more)
application/src/test/powershell/: testCameraManagerScript.ps1  testClientLauncher.ps1  testConnectionScript.ps1
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: dccv-cpp.gradle.kts  dccv-docker-build.gradle.kts  dccv-spotless.gradle.kts
client/: Dockerfile  README.md
client/interface/: package.json
client/interface/src/: App.js
config/spotless/: .editorconfig  prettier.json  scalafmt.conf
distribution/: build.gradle.kts  dev-utils.sh  docker-compose.yml
distribution/cameranode/: Dockerfile  build.gradle.kts  entrypoint.sh
distribution/usernode/: Dockerfile  build.gradle.kts  entrypoint.sh
distribution/utilitynode/: Dockerfile  build.gradle.kts  entrypoint.sh  init-mongo.js
domain/: CMakeLists.txt  Dockerfile  build.gradle.kts  cpp-build-plugin.gradle.kts  docker-build-plugin.gradle.kts  run.sh
domain/src/main/cpp/: app.cpp
domain/src/main/headers/: app.h
domain/src/test/cpp/: app_test.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
interface/: build.gradle.kts
interface/cli/: build.gradle.kts
interface/client/: .npmrc  Dockerfile  README.md  build.gradle.kts  entrypoint.sh  package-lock.json  package.json  tailwind.config.js
interface/client/src/: App.css  App.js
interface/server/: build.gradle.kts
presentation/: build.gradle.kts
storage/: .env  build.gradle.kts
(+57 files in other folders)
